--- a/views/register.html
+++ b/views/register.html
@@ -24,7 +24,7 @@
     <!--HEADER-->
     <header class="main-header">
       <div class="main-header-top-bar">
-        <img src="/img/logo-mercado-liebre.svg" class="logo" />
+        <a href="/"><img src="/img/logo-mercado-liebre.svg" class="logo" /></a>
         <h2 class="copy-header">
           <i class="fa-solid fa-hand-holding-dollar"></i>
           Comprá en cuotas y sin interes
